# AutoMato

./: .clang-format  .gitignore  readme.md
CanRed/: .env.example  .gitignore  CMakeLists.txt  conanfile.txt  installdependencies.sh  make.sh  makeandrun.sh  schema.sql
CanRed/lib/CanManager/: ACKHandler.cpp  ACKHandler.h  CanManager.cpp  CanManager.h  LongFrameHandler.cpp  LongFrameHandler.h
CanRed/lib/Database/: Database.cpp  Database.h  SqliteIterator.cpp  SqliteIterator.h  SqliteQuery.cpp  SqliteQuery.h  SqliteResult.h  SqliteValue.cpp  SqliteValue.h  sqlite_helpers.h
CanRed/lib/EventManager/: EventManager.cpp  EventManager.h  FileWatcher.h
CanRed/lib/Interfaces/: SerialInterface.cpp  SerialInterface.h
CanRed/lib/Module/: Module.h
CanRed/lib/SocketWatcher/: SocketWatcher.cpp  SocketWatcher.h
CanRed/lib/Utils/: get_current_time_ms.h  get_env_var.h
CanRed/src/: main.cpp
Common/: readme.md
Common/AnyType/: AnyType.cpp  AnyType.h
Common/CAN/: CanConstants.h  CanFrame.cpp  CanFrame.h  CanID.cpp  CanID.h  CanSerializer.h
Common/Events/: Event.cpp  Event.h  EventConstants.h
Common/Interfaces/: AutomatoInterface.h  SerialCommon.h
Common/Platform/: Platform.h
Common/Util/: print_bin.h  print_u8_array.h  seconds_to_ms.h
Documentation/: CAN.md  Events.md  OverView.md  Parsing.md  SocketInterface.md  readme.md
Documentation/NodeRed/: NodeRed.md  ParsingOfflineNodes.md
Modules/: readme.md
Modules/AutoStart/: platformio.ini  readme.md
Modules/AutoStart/src/: main.cpp
Modules/Common/: readme.md
Modules/Common/AutoMato/: ArduinoSerialInterface.cpp  Automato.cpp  Automato.h  MCP2515Interface.cpp  MCP2515Interface.h
Modules/Common/CommandHandler/: CommandHandler.h
Modules/Common/CryptoHelper/: CryptoAesGCM.c  CryptoAesGCM.h  CryptoHelper.h  CryptoLoRaBase64Ascii.c  CryptoLoRaBase64Ascii.h
Modules/Common/Filesystem/: ESP_LittleFS.cpp  ESP_LittleFS.h  FilesystemInterface.h
Modules/Common/InterfaceHandler/: InterfaceHandler.cpp  InterfaceHandler.h
Modules/Common/Interfaces/: ArduinoSerialInterface.h
Modules/Common/Log/: Log.hpp
Modules/Common/LongFrameHandler/: LongFrameHandler.cpp  LongFrameHandler.h
Modules/Common/LoraE5/: LoraE5.cpp  LoraE5.h
Modules/Common/Util/: yield_if_needed.h
Modules/ExternalLibraries/MCP2515/: info.md  mcp2515.h
Modules/KeyFobProject/: readme.md
Modules/KeyFobProject/Common/: Docs.md
Modules/KeyFobProject/LoraModule/: .clang-format  fix_multiple_ways_to_build.sh  openocd_ftdi_f2232h.cfg  platformio.ini
Modules/KeyFobProject/LoraRemote/: .clang-format  platformio.ini  upload_via_ftdi.sh
Modules/TempSensor/: platformio.ini  readme.md
Modules/TempSensor/src/: main.cpp
NodeRed/: .env.example  .eslintrc.json  .gitignore  install.sh  package-lock.json  package.json  tsconfig.json
NodeRed/src/: index.ts
NodeRed/src/@types/: flow_parsing_types.ts  ipc_types.ts  node_types.ts
NodeRed/src/ModuleRouter/: moduleRouter.ts
NodeRed/src/flow_parsing/: cli.ts  formatNodes.ts  parseNodes.ts  util.ts  (+2 more)
Scripts/: run_system.sh  setup.sh
(+43 files in other folders)
